[gd_scene load_steps=12 format=3 uid="uid://ddpep5a014anc"]

[ext_resource type="Script" uid="uid://dlxgtns5wr82p" path="res://Scripts/MenuManager.gd" id="1_8um5k"]
[ext_resource type="PackedScene" uid="uid://6wc4ioattvcx" path="res://Prefabs/ShaderTexture.tscn" id="1_853f1"]
[ext_resource type="Texture2D" uid="uid://bn2bvn7hh1ebm" path="res://Sprites/Wall.png" id="2_8saeu"]
[ext_resource type="PackedScene" uid="uid://bm301snojvb2l" path="res://Prefabs/ShaderWall.tscn" id="3_df05h"]
[ext_resource type="Texture2D" uid="uid://do0k22qnbxb4d" path="res://Sprites/LeftWall.png" id="4_8um5k"]
[ext_resource type="Texture2D" uid="uid://6gu07klthnv0" path="res://Sprites/RightWall.png" id="5_xim88"]
[ext_resource type="FontFile" uid="uid://csv540bsiu83e" path="res://Fonts/Daydream.ttf" id="7_xim88"]
[ext_resource type="FontFile" uid="uid://cgt18visf14nd" path="res://Fonts/04B_30__.TTF" id="8_koqhg"]
[ext_resource type="AudioStream" uid="uid://ii3w0kleagti" path="res://Audio/Musics/MenuSong.wav" id="9_cmrfp"]

[sub_resource type="Environment" id="Environment_cmrfp"]
background_mode = 3
ambient_light_source = 1
ambient_light_color = Color(0.823529, 0.788235, 0.647059, 1)
ambient_light_energy = 14.27
tonemap_mode = 1
tonemap_exposure = 1.1
tonemap_white = 0.5
glow_enabled = true

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_loo7a"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8um5k")

[node name="ShaderBackground" parent="." instance=ExtResource("1_853f1")]
modulate = Color(0.294118, 0.239216, 0.266667, 1)
show_behind_parent = true
position = Vector2(0, -258)
rTexture = ExtResource("2_8saeu")
iXSize = 144
iYSize = 816

[node name="LeftWall" parent="." instance=ExtResource("3_df05h")]
position = Vector2(0, -258)
rTexture = ExtResource("4_8um5k")
iXSize = 48
iYSize = 816

[node name="RightWall" parent="." instance=ExtResource("3_df05h")]
position = Vector2(144, -258)
rTexture = ExtResource("5_xim88")
iXSize = 48
iYSize = 816

[node name="VBoxContainer_Main" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 144.0
offset_bottom = 256.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer_Main"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("7_xim88")
theme_override_font_sizes/font_size = 0
text = "Bucket
Well
"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer_Main"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer_Main/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Button1" type="Button" parent="VBoxContainer_Main/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_koqhg")
text = "PLAY"

[node name="Button2" type="Button" parent="VBoxContainer_Main/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_koqhg")
text = "INFO"

[node name="Button3" type="Button" parent="VBoxContainer_Main/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_koqhg")
text = "QUIT"

[node name="VBoxContainer_Info" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 256.0
offset_right = 144.0
offset_bottom = 512.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer_Info"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("7_xim88")
theme_override_font_sizes/font_size = 12
text = "
Get 
20 coins
and avoid 
obstacles
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer_Info"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer_Info/HBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer_Info/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_koqhg")
text = "BACK"

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Music" type="AudioStreamPlayer2D" parent="."]
position = Vector2(1, 0)
stream = ExtResource("9_cmrfp")
autoplay = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_cmrfp")
camera_attributes = SubResource("CameraAttributesPractical_loo7a")

[connection signal="pressed" from="VBoxContainer_Main/HBoxContainer/VBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="VBoxContainer_Main/HBoxContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer_Main/HBoxContainer/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer_Info/HBoxContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
